k3s/components/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shuttle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sadrasamadi/shuttle-backend:latest@sha256:252075e2d5970c202b3a5cb17d1cd98275c08eb858cc09dd22f9f83880e3b5cf # {"$imagepolicy": "shuttle:backend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
