k3s/components/backend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: shuttle
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.shuttle.sadra.xyz`)
      kind: Rule
      services:
        - name: backend
          port: 80
  tls:
    certResolver: le
